--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pillow>=11.0.0",
     "requests>=2.32.0",
     "mercadopago>=2.2.0",
+    "sqlmodel>=0.0.16",
 ]
 
 [build-system]
