--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "requests>=2.32.0",
     "mercadopago>=2.2.0",
     "sqlmodel>=0.0.16",
+    "qrcode[pil]>=7.4.2",
 ]
 
 [build-system]
