feat: Adiciona configuração de deploy com Docker e Caddy
- Adiciona docker-compose.yml para facilitar deploy
- Adiciona Caddyfile para configuração do proxy reverso
- Adiciona script de deploy (deploy.sh)
- Adiciona documentação completa de deploy (DEPLOY.md)
- Melhora Dockerfile com healthcheck e diretórios
- Adiciona .dockerignore para otimizar build
- Atualiza env.example com informações sobre CORS

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,21 +1,52 @@
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-.Python
-*.so
-*.egg
-*.egg-info
-dist
-build
-.venv
-venv
-env
-.env
+# Git
 .git
 .gitignore
-*.md
-.vscode
-.idea
-*.log
 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+.venv/
+venv/
+.uv/
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Logs
+*.log
+logs/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Project specific
+temp/
+tmp/
+*.db
+*.pdf
+
+# Documentation
+*.md
+!README.md
+
+# Docker
+Dockerfile
+docker-compose.yml
+.dockerignore
+
+# Caddy
+Caddyfile
