--- a/env.example
+++ b/env.example
@@ -85,7 +85,8 @@ PROMOTION_NAME=Oferta de Natal
 # CORS (Origins permitidos)
 # ============================================
 # Lista de URLs separadas por vírgula
-# Em produção, remova localhost e use apenas seu domínio
+# Em produção, inclua o domínio do frontend (GitHub Pages) e domínio da API
+# Exemplo: CORS_ORIGINS=https://seu-usuario.github.io,https://www.seudominio.com,https://seudominio.com
 CORS_ORIGINS=https://www.seudominio.com,https://seudominio.com
 
 # ============================================
