feat: Estrutura de produção completa com Docker e persistência de dados
- Configura docker-compose.yml para produção com volumes data/ e logs/
- Ajusta Dockerfile para rodar como usuário não-root (appuser)
- Configura banco SQLite para usar /app/data/database.sqlite
- Atualiza config.py com caminhos padrão para produção
- Adiciona env.example com ENV=production e DATABASE_URL correto
- Cria README.DEPLOY.md com guia completo de deploy
- Adiciona CI_CD.md com preparação para GitHub Actions
- Atualiza .gitignore para ignorar data/ e logs/
- Prepara estrutura .github/workflows/ para CI/CD futuro

Características:
- Zero configuração manual na VPS
- Persistência de dados via volumes Docker
- Segurança: container roda como usuário não-root
- Pronto para deploy automático via CI/CD

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,8 @@ tmp/
 # Backup directory (contains user-generated files)
 temp/
 
-
-
+# Production data directories
+data/
+logs/
 *.db
+database.sqlite
