--- a/env.example
+++ b/env.example
@@ -52,6 +52,9 @@ MERCADOPAGO_WEBHOOK_SECRET=seu_webhook_secret_aqui
 # CONFIGURAÇÃO DA APLICAÇÃO
 # ============================================
 
+# Ambiente (development, production)
+ENV=production
+
 # Nome da aplicação
 APP_NAME=PetStory API
 
@@ -92,19 +95,19 @@ CORS_ORIGINS=https://www.seudominio.com,https://seudominio.com
 # ============================================
 # CONFIGURAÇÃO DO BANCO DE DADOS
 # ============================================
-# SQLite para desenvolvimento/MVP (padrão)
-# PostgreSQL para produção (recomendado)
-# Exemplos:
-#   SQLite: sqlite:///./petstory.db
-#   PostgreSQL: postgresql://user:password@localhost/petstory
-DATABASE_URL=sqlite:///./petstory.db
+# SQLite para produção (persistido em /app/data via volume)
+# Para Docker: use sqlite:////app/data/database.sqlite (4 barras)
+# Para desenvolvimento local: use sqlite:///./database.sqlite (3 barras)
+DATABASE_URL=sqlite:////app/data/database.sqlite
 
 # ============================================
 # CONFIGURAÇÕES AVANÇADAS (Opcional)
 # ============================================
 
 # Diretório temporário para arquivos
-TEMP_DIR=temp
+# Em produção com Docker: use /app/data/temp
+# Em desenvolvimento: use temp
+TEMP_DIR=/app/data/temp
 
 # Delay entre gerações de IA (para evitar rate limit)
 WORKER_SLEEP_SECONDS=2.0
